fixed most of the obvious layout issues and got context to work although it feels really unnecessary

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -19,15 +19,15 @@
 html, body, .App {
   max-width: 100vw;
   margin: 0px;
-  background-color: #2d2c38;
+  /* background-color: #2d2c38; */
   box-sizing: border-box;
 }
-h1 {
-  color: white;
+/* h1 {
+  color: white
 }
 .error {
   color: white;
-}
+} */
 .App {
   min-height: 100vh;
   display: flex;
